refactor: move import filtering logic from TreeSitterAnalyzer to JavaAnalyzer
The general `relevantImportsFor` implementation was too specific to Java
semantics. This moves the logic to `JavaAnalyzer` and provides a clean
extension point in the base class for other languages.